Fix spacing around content editor

--- a/style.css
+++ b/style.css
@@ -591,8 +591,8 @@ details[open] summary::-webkit-details-marker {
 }
 
 .contentEditor {
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     padding: 5px;
     padding-bottom: 0;
     background-color: var(--shade1);
